<!--
 Copyright 2019 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">Alarm Scheduler</string>

    <string name="alarm">Current Alarm</string>
    <string name="set_alarm">Set your Alarm</string>
    <string name="last_triggered">Last Triggered: %s</string>
    <string name="dash">-</string>
    <string name="error_select_day">Need to select at least one day</string>
    <string name="prompt_alarm_set_title">Alarm Set</string>
    <string name="prompt_alarm_set_message">The alarm has been set. You may close the app.</string>
    <string name="prompt_alarm_received_title">Alarm Received</string>
    <string name="prompt_alarm_received_message">Alarm received: %s</string>


    <string name="save_alarm">Save Alarm</string>
    <string name="clear_alarm">Clear Alarm</string>
    <string name="day_m">M</string>
    <string name="day_t">T</string>
    <string name="day_w">W</string>
    <string name="day_f">F</string>
    <string name="day_s">S</string>
</resources>
